# wizaut

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  wizaut.yaml
.github/workflows/: test.yml
src/wizaut/: __init__.py  __main__.py  api.py  config.py  wiz.py
src/wizaut/static/: styles.css
src/wizaut/templates/: index.j2  light.j2  lights.j2
