[tool.poetry]
name = "wizaut"
version = "1.0.0"
description = "Lightweight Web UI to manage WiZ lights"
authors = ["Lev Gorodetskii <github@drsr.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
Jinja2 = "^3.1.2"
pywizlight = "^0.5.14"
python-multipart = "^0.0.6"
ruamel-yaml = "^0.18.5"
uvicorn = "^0.24.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
